--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/RentACar
 endorsed.classpath=
 excludes=
 file.reference.jbcrypt.jar=..\\..\\..\\..\\Downloads\\jbcrypt.jar\\jbcrypt.jar
+file.reference.jcalendar-1.4.jar=..\\..\\..\\..\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.32.jar=..\\..\\..\\..\\Downloads\\MySqlJdbcDriver\\mysql-connector-j-8.0.32.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
-    ${file.reference.jbcrypt.jar}
+    ${file.reference.jbcrypt.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
