--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,14 @@ excludes=
 file.reference.jbcrypt.jar=..\\..\\..\\..\\Downloads\\jbcrypt.jar\\jbcrypt.jar
 file.reference.jcalendar-1.4.jar=..\\..\\..\\..\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.0.32.jar=..\\..\\..\\..\\Downloads\\MySqlJdbcDriver\\mysql-connector-j-8.0.32.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\muham\\Downloads\\MySqlJdbcDriver\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.32.jar}:\
     ${file.reference.jbcrypt.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=RentACar
-main.class=rentacar.RentACar
+main.class=frm.frmAddRental
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
